--- a/Lectures/html/lecture-10.html
+++ b/Lectures/html/lecture-10.html
@@ -873,11 +873,13 @@ Next PC = PC + 4
 
 <p><strong>Steps</strong>:</p>
 
-<p>1. Create truth table (opcode → control signals)</p>
-<p>2. List all control signals as outputs</p>
-<p>3. Fill in values for each instruction</p>
-<p>4. Use Karnaugh maps or Boolean algebra to minimize</p>
-<p>5. Implement with logic gates</p>
+<ol>
+<li>Create truth table (opcode → control signals)</li>
+<li>List all control signals as outputs</li>
+<li>Fill in values for each instruction</li>
+<li>Use Karnaugh maps or Boolean algebra to minimize</li>
+<li>Implement with logic gates</li>
+</ol>
 
 <p><strong>Example for RegWrite</strong>:</p>
 
