--- a/Lectures/html/lecture-11.html
+++ b/Lectures/html/lecture-11.html
@@ -153,18 +153,22 @@
 
 <p><strong>Control Signals Generated:</strong></p>
 
-<p>1. <strong>RegDst</strong> (1 bit): Select register write address</p>
-<p>2. <strong>Branch</strong> (1 bit): Instruction is branch type</p>
-<p>3. <strong>MemRead</strong> (1 bit): Enable memory read</p>
-<p>4. <strong>MemtoReg</strong> (1 bit): Select register write data source</p>
-<p>5. <strong>MemWrite</strong> (1 bit): Enable memory write</p>
-<p>6. <strong>ALUSrc</strong> (1 bit): Select ALU second operand source</p>
-<p>7. <strong>RegWrite</strong> (1 bit): Enable register file write</p>
-<p>8. <strong>ALUOp</strong> (2 bits): ALU operation category</p>
+<ol>
+<li><strong>RegDst</strong> (1 bit): Select register write address</li>
+<li><strong>Branch</strong> (1 bit): Instruction is branch type</li>
+<li><strong>MemRead</strong> (1 bit): Enable memory read</li>
+<li><strong>MemtoReg</strong> (1 bit): Select register write data source</li>
+<li><strong>MemWrite</strong> (1 bit): Enable memory write</li>
+<li><strong>ALUSrc</strong> (1 bit): Select ALU second operand source</li>
+<li><strong>RegWrite</strong> (1 bit): Enable register file write</li>
+<li><strong>ALUOp</strong> (2 bits): ALU operation category</li>
+</ol>
 
 <p><strong>Additional Signal for Jump:</strong></p>
 
-<p>9. <strong>Jump</strong> (1 bit): Select jump target for PC</p>
+<ol start="9">
+<li><strong>Jump</strong> (1 bit): Select jump target for PC</li>
+</ol>
 
 <p><strong>Implementation:</strong></p>
 
