Fix formatting issues and typos in lectures 18 and 19 HTML files

--- a/Lectures/html/lecture-18.html
+++ b/Lectures/html/lecture-18.html
@@ -76,17 +76,19 @@
 
 <h3>18.2.1 Key Purposes of Virtual Memory</h3>
 
-1. <strong>Allow programs to use more memory than actually available</strong>
-2. <strong>Support multiple programs running simultaneously on a CPU</strong>
-3. <strong>Enable safe and efficient memory sharing between programs</strong>
-4. <strong>Ensure programs only access their allocated memory</strong>
+<ol>
+<li><strong>Allow programs to use more memory than actually available</strong></li>
+<li><strong>Support multiple programs running simultaneously on a CPU</strong></li>
+<li><strong>Enable safe and efficient memory sharing between programs</strong></li>
+<li><strong>Ensure programs only access their allocated memory</strong></li>
+</ol>
 
 
 <h2>18.3 CPU Word Size and Address Space</h2>
 
 <p>The relationship between CPU word size and addressable memory determines the maximum amount of memory that can be addressed.</p>
 
-<h3>18.3.1 Address Space by CPU Word Sizerd Size</h3>
+<h3>18.3.1 Address Space by CPU Word Size</h3>
 
 <h4>8-bit CPU</h4>
 
@@ -213,7 +215,7 @@
 
 <h2>18.8 Virtual and Physical Address Structure</h2>
 
-<h3>18.8.1 Example with 32-bit Addressesdresses</h3>
+<h3>18.8.1 Example with 32-bit Addresses</h3>
 
 <h4>Virtual Address (32 bits)</h4>
 
@@ -348,7 +350,7 @@
 
 <h2>18.12 Page Table Size Calculation</h2>
 
-<h3>18.12.1 Example: 4 GB Virtual, 1 GB Physical, 1 KB PagesKB Pages</h3>
+<h3>18.12.1 Example: 4 GB Virtual, 1 GB Physical, 1 KB Pages</h3>
 
 <h4>Number of Entries</h4>
 
@@ -429,7 +431,7 @@
 
 <h2>18.15 Page Fault Handling</h2>
 
-<h3>18.15.1 What Operating System Must Do Must Do</h3>
+<h3>18.15.1 What Operating System Must Do</h3>
 
 <h4>1. Fetch Missing Page</h4>
 
@@ -567,7 +569,7 @@
 <li><strong>10-100 cycles</strong> (memory access required)</li>
 </ul>
 
-<h3>18.16.5 TLB Operationperation</h3>
+<h3>18.16.5 TLB Operation</h3>
 
 <h4>Hit</h4>
 
