--- a/Lectures/html/lecture-19.html
+++ b/Lectures/html/lecture-19.html
@@ -77,7 +77,7 @@
 
 <h2>19.3 Performance Evolution Background</h2>
 
-<h3>19.3.1 Historical Performance Improvementsvements</h3>
+<h3>19.3.1 Historical Performance Improvements</h3>
 
 <h4>Early Methods: Clock Frequency Scaling</h4>
 
