Fix typos in lecture 19 HTML file; enhance instructor section layout and add error scanning script

--- a/Lectures/html/lecture-19.html
+++ b/Lectures/html/lecture-19.html
@@ -739,7 +739,7 @@ Named after four states: <strong>Modified, Exclusive, Shared, Invalid</strong>
 <li>Beyond this, contention significantly degrades performance</li>
 </ul>
 
-<h3>19.16.3 Alternative Interconnectsconnects</h3>
+<h3>19.16.3 Alternative Interconnects</h3>
 
 <h4>Crossbar Switches</h4>
 
@@ -824,7 +824,7 @@ Named after four states: <strong>Modified, Exclusive, Shared, Invalid</strong>
 
 <h2>19.18 Two Types of NUMA</h2>
 
-<h3>19.18.1 1. NC-NUMA (Non-Cached NUMA)</h3>
+<h3>19.18.1 NC-NUMA (Non-Cached NUMA)</h3>
 
 <img src="../img/Multiprocessors_mmu.jpg" alt="Bus Snooping" style="max-width: 100%;">
 
@@ -836,7 +836,7 @@ Named after four states: <strong>Modified, Exclusive, Shared, Invalid</strong>
 <li>Simpler but slower</li>
 </ul>
 
-<h3>19.18.2 2. CC-NUMA (Cache-Coherent NUMA)</h3>
+<h3>19.18.2 CC-NUMA (Cache-Coherent NUMA)</h3>
 
 <img src="../img/Multiprocessors_cmmu.jpg" alt="Bus Snooping" style="max-width: 100%;">
 
