--- a/Lectures/html/lecture-04.html
+++ b/Lectures/html/lecture-04.html
@@ -157,7 +157,7 @@
 
 <div align="center">
 <img src="../img/Chapter%202%20ARM%20Conventions.jpg" alt="ARM Register Usage Conventions" width="600">
-<p><em>Figure 1: ARM Register Usage Conventions</em></p>
+<p><em>ARM Register Usage Conventions</em></p>
 </div>
 
 <pre><code class="language-asm6502">R0-R3:   Argument/result registers
