--- a/Lectures/html/lecture-09.html
+++ b/Lectures/html/lecture-09.html
@@ -322,7 +322,7 @@ f = 1/(250 × 10^-12) = 4 GHz
 
 <div align="center">
 <img src="../img/Chapter 9 Register.jpeg" width=600>
-<p><em>Figure 1: Register Timing Diagram</em></p>
+<p><em>Register Timing Diagram</em></p>
 </div>
 
 <p><strong>Register with Write Control</strong></p>
@@ -337,7 +337,7 @@ f = 1/(250 × 10^-12) = 4 GHz
 
 <div align="center">
 <img src="../img/Chapter 9 Write EN Register.jpeg" width=600>
-<p><em>Figure 2: Register with Write Enable Timing Diagram</em></p>
+<p><em>Register with Write Enable Timing Diagram</em></p>
 </div>
 
 <!-- Clock: <em></em>|‾|<em></em>|‾|<em></em>|‾|<em></em>
@@ -393,7 +393,7 @@ State:  [A][A][A][D][D]
 
 <div align="center">
 <img src="../img/Chapter 9 CPU Overview.jpeg" width=600>
-<p><em>Figure 3: CPU Execution Stages Overview</em></p>
+<p><em>CPU Execution Stages Overview</em></p>
 </div>
 
 <h3>9.4.1 Instruction Fetch (IF)</h3>
@@ -925,7 +925,7 @@ BNE: PCSrc = Branch AND NOT(Zero)
 
 <div align="center">
 <img src="../img/Chapter 9 CPU Control and Datapath.jpeg" width=600>
-<p><em>Figure 4: Complete Single-Cycle CPU Control and Datapath</em></p>
+<p><em>Complete Single-Cycle CPU Control and Datapath</em></p>
 </div>
 
 <h3>9.9.1 Integrated Components</h3>
