--- a/Lectures/html/lecture-11.html
+++ b/Lectures/html/lecture-11.html
@@ -208,7 +208,7 @@
 
 <div align="center">
 <img src="../img/Chapter 10 R Type.jpeg" width=600>
-<p><em>Figure 1: R-Type Instruction Datapath</em></p>
+<p><em>R-Type Instruction Datapath</em></p>
 </div>
 
 <p><strong>Active Elements (shown in black):</strong></p>
@@ -430,7 +430,7 @@
 
 <div align="center">
 <img src="../img/Chapter 10 Branch If Equal.jpeg" width=600>
-<p><em>Figure 2: Branch If Equal Instruction Datapath</em></p>
+<p><em>Branch If Equal Instruction Datapath</em></p>
 </div>
 
 <p><strong>Active Elements:</strong></p>
@@ -636,7 +636,7 @@ If PCSrc = 0: PC ← PC + 4 (1004)
 
 <div align="center">
 <img src="../img/Chapter 10 Load Word.jpeg" width=600>
-<p><em>Figure 3: Load Word Instruction Datapath</em></p>
+<p><em>Load Word Instruction Datapath</em></p>
 </div>
 
 <p><strong>Active Elements:</strong></p>
@@ -1083,7 +1083,7 @@ Jump Target: [31:28] [Target×4] [00]
 
 <div align="center">
 <img src="../img/Chapter 10 Jump.jpeg" width=600>
-<p><em>Figure 4: Jump Instruction Datapath with Additional Hardware</em></p>
+<p><em>Jump Instruction Datapath with Additional Hardware</em></p>
 </div>
 
 <p><strong>New Components:</strong></p>
