--- a/Lectures/html/lecture-13.html
+++ b/Lectures/html/lecture-13.html
@@ -126,7 +126,7 @@
 
 <div align="center">
 <img src="../img/Pipeline Stages.jpeg" width=600>
-<p><em>Figure 1: Five-Stage MIPS Pipeline Architecture</em></p>
+<p><em>Five-Stage MIPS Pipeline Architecture</em></p>
 </div>
 
 <h3>13.3.1 Stage 1: Instruction Fetch (IF)</h3>
@@ -307,7 +307,7 @@
 
 <div align="center">
 <img src="../img/Pipeline Registers.jpg" width=600>
-<p><em>Figure 2: Pipeline Registers Between Pipeline Stages</em></p>
+<p><em>Pipeline Registers Between Pipeline Stages</em></p>
 </div>
 
 <p><strong>Key Function:</strong></p>
