--- a/Lectures/html/lecture-14.html
+++ b/Lectures/html/lecture-14.html
@@ -478,7 +478,7 @@
 
 <div align="center">
 <img src="../img/Memory Hierarchy.jpg" width=400>
-<p><em>Figure 1: Memory Hierarchy with SRAM Cache, DRAM Main Memory, and Disk Storage</em></p>
+<p><em>Memory Hierarchy with SRAM Cache, DRAM Main Memory, and Disk Storage</em></p>
 </div>
 
 
@@ -1733,7 +1733,7 @@ Index bits (last 3): 101 → Index 5
 
 <div align="center">
 <img src="../img/Direct Mapped Read.jpg" width=600>
-<p><em>Figure 2: Direct-Mapped Cache Read Access Process</em></p>
+<p><em>Direct-Mapped Cache Read Access Process</em></p>
 </div>
 
 <h3>14.15.1 Read Access Process</h3>
