--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
         <div class="downloads">
           <a
-            href="materials/CO224-Complete-Notes.pdf"
+            href="materials/Lectures on Computer Architecture.pdf"
             class="btn btn-primary"
             download
           >
@@ -70,11 +70,11 @@
                 <p><strong>Title:</strong> Lectures on Computer Architecture</p>
                 <p><strong>Author:</strong> Dr. Isuru Nawinne</p>
                 <p><strong>Institution:</strong> Department of Computer Engineering, University of Peradeniya</p>
-                <p><strong>ISBN:</strong> 978-624-92913-0-0</p>
+                <p><strong>ISBN:</strong> 978-624-92913-1-7</p>
                 <!-- <p><strong>Year:</strong> 2025</p> -->
               </div>
               <div class="publishing-info-column">
-                <img src="assets/images/barcode-isbn.png" alt="ISBN Barcode" style="max-width: 200px; height: auto;">
+                <img src="materials/ISBN_Book.png" alt="ISBN 978-624-92913-1-7 Barcode" style="max-width: 200px; height: auto;">
               </div>
             </div>
           </div>
@@ -199,9 +199,9 @@
         </div>
       </section>
 
-      <!-- Companion Practical Guide -->
+      <!-- Companion Guide for Practicals -->
       <section class="intro">
-        <h2>Companion Practical Guide</h2>
+        <h2>Companion Guide for Practicals</h2>
         <h3 style="margin-top: 0.5rem;"><em>Students' Guide to Practicals on Computer Architecture</em></h3>
         <p>
           Hands-on practical series to complement the lecture series, providing practical experience in processor microarchitecture and memory systems using Verilog. Students build their own processors and implement memory hierarchy with caching.
